--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -823,7 +823,9 @@
       "minimum-supported-engine-and-version": "{engine} >= {min_version} required",
       "restore-to-point-in-time": "Restore to point in time",
       "no-earlier-than": "Restore point-in-time cannot be earlier than [{earliest}] (the earliest available backup).",
-      "no-later-than-now": "Restore point-in-time cannot be later than now."
+      "no-later-than-now": "Restore point-in-time cannot be later than now.",
+      "restore-before-last-migration": "Restore to the point before last migration",
+      "restore-before-last-migration-help-info": "@:{'database.pitr.restore-before-last-migration'}. {link}."
     },
     "show-reserved-tables": "Show Bytebase reserved tables",
     "show-reserved-databases": "Show Bytebase reserved databases",
