--- a/frontend/src/locales/zh-CN.json
+++ b/frontend/src/locales/zh-CN.json
@@ -824,7 +824,9 @@
       "minimum-supported-engine-and-version": "需要 {engine} >= {min_version}",
       "restore-to-point-in-time": "恢复到指定时间点",
       "no-earlier-than": "恢复的时间点不能早于 [{earliest}] (最早可用的备份)。",
-      "no-later-than-now": "恢复的时间点不能晚于当前时间。"
+      "no-later-than-now": "恢复的时间点不能晚于当前时间。",
+      "restore-before-last-migration": "恢复到上次变更历史之前",
+      "restore-before-last-migration-help-info": "@:{'database.pitr.restore-before-last-migration'}。{link}。"
     },
     "show-reserved-tables": "显示 Bytebase 保留的表",
     "show-reserved-databases": "显示 Bytebase 保留的数据库",
