chore: add a hint on help trigger point (#2052)
Former-commit-id: 3231f7394e7487c179e4b3ed6b88cd7048d38668

--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -204,7 +204,8 @@
     "pitr": "PITR",
     "fix": "Fix",
     "go-now": "Go now",
-    "sync-now": "Sync Now"
+    "sync-now": "Sync Now",
+    "show-help": "Show help"
   },
   "error-page": {
     "go-back-home": "Go back home"
