feat(frontend): UI support for gh-ost sync task progress (#2055)
* feat: type definition

* feat: convert TaskProgress API resource to JS object

* feat(frontend): implement gh-ost sync task progress UI

* chore: imports

Former-commit-id: b510a7ed6798866b46bfb49721967945c629bce5

--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -265,6 +265,16 @@
       "bb-task-database-schema-update-ghost-sync": "Sync data",
       "bb-task-database-schema-update-ghost-cutover": "Switch tables",
       "bb-task-database-schema-update-ghost-drop-original-table": "Drop original table"
+    },
+    "progress": {
+      "completed-units": "Completed {units}",
+      "total-units": "Total {units}",
+      "eta": "ETA",
+      "units": {
+        "unit": "units",
+        "row": "rows"
+      },
+      "counting": "Counting"
     }
   },
   "banner": {
