feat(frontend): support "dismissed stale approval" activity (#2116)
* feat(frontend): support "dismissed stale approval" activity

* Update frontend/src/components/Issue/IssueActivityPanel.vue

Co-authored-by: Danny Xu <98006139+d-bytebase@users.noreply.github.com>

* chore: comments wording

* Update frontend/src/locales/en-US.json

Co-authored-by: p0ny <907577610@qq.com>

Co-authored-by: Danny Xu <98006139+d-bytebase@users.noreply.github.com>
Co-authored-by: p0ny <907577610@qq.com>
Former-commit-id: ccb731f00a7c43fdc1705e3c970b283ed88882fb

--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -431,7 +431,8 @@
       "completed": "completed",
       "failed": "failed",
       "task-name": " task {name}",
-      "committed-to-at": "committed {file} to{branch}{'@'}{repo}"
+      "committed-to-at": "committed {file} to{branch}{'@'}{repo}",
+      "dismissed-stale-approval": "dismissed stale approvals of {task}"
     },
     "subject-prefix": {
       "task": "Task"
