chore(i18n): update descriptions (#2120)
Former-commit-id: 53680b7bb7f91a9acfa2b489c661a1a26a54cf52

--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -714,9 +714,9 @@
       "tip": "The policy is not applied retroactively.",
       "info": "For updating schema on the existing database, this setting controls whether the task requires manual approval.",
       "manual": "Require manual approval",
-      "manual-info": "Pending schema migration task will only be executed after it's manually approved.",
+      "manual-info": "Tasks will only be executed after being manually approved.",
       "auto": "Skip manual approval",
-      "auto-info": "Pending schema migration task will be executed automatically."
+      "auto-info": "Tasks will be approved and executed automatically if all task checks pass."
     },
     "backup": {
       "name": "Database backup schedule policy",
