--- a/frontend/src/locales/zh-CN.json
+++ b/frontend/src/locales/zh-CN.json
@@ -715,9 +715,9 @@
       "tip": "新策略仅对新建工单生效",
       "info": "要更改数据库 schema，该选项控制了是否需要手动审批。",
       "manual": "需要人工审批",
-      "manual-info": "进行中的 schema 改动任务只有被人工审批后才会执行。",
+      "manual-info": "任务只有被人工审批后才会执行。",
       "auto": "无需审批",
-      "auto-info": "进行中的任务无需审核并且会被自动执行。"
+      "auto-info": "如果任务检查都通过的话，任务无需审批并且会被自动执行。"
     },
     "backup": {
       "name": "数据库备份策略",
