--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -689,7 +689,7 @@
       "new-user": "New to Bytebase?",
       "demo-note": "Please use demo account to sign in",
       "gitlab": "Login with GitLab",
-      "gitlab-demo": "GitLab login is disabled in Demo mode",
+      "3rd-party-auth-demo": "Third-party authentication is disabled in Demo mode",
       "gitlab-oauth": "Reach to your Admin to enable GitLab login"
     },
     "password-forget": {
