feat(frontend): schema version and sync status in database table (#2179)
* feat(frontend): support center-aligned table column

* feat(frontend): database table improvement

Former-commit-id: dd8621b0144cfe8648cf21abe83eb08324561519

--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -854,7 +854,9 @@
         "retention-period": "Retention period(days)"
       }
     },
-    "backup-policy-violation": "Backup policy violation"
+    "backup-policy-violation": "Backup policy violation",
+    "sync-at": "Sync at {time}",
+    "not-found": "Not found"
   },
   "repository": {
     "branch-observe-file-change": "The branch where Bytebase observes the file change.",
