--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -892,6 +892,7 @@
     "choose-git-provider-visit-workspace": "Visit {workspace} setting to add more Git providers.",
     "choose-git-provider-contact-workspace-owner": "Contact your Bytebase owner if you want other Git providers to appear here. Bytebase currently supports self-host GitLab EE/CE, and plan to add GitLab.com, and GitHub Enterprise later.",
     "select-repository-attention-gitlab": "Bytebase only lists GitLab projects granting you at least the 'Maintainer' role, which allows to configure the project webhook to observe the code push event.",
+    "select-repository-attention-github": "Bytebase only lists GitHub repositories you have admin permissions, which allows to configure the repository webhook to observe the code push event.",
     "select-repository-search": "Search repository",
     "linked": "Linked repositories",
     "role-provider": "Project role provider",
