feat: add statement type task check to force separation of DDL and DML (#2181)
* chore: add statement type task check to force separation of DDL and DML

* chore: add error for invalid task type

* chore: address comment

Former-commit-id: 4f58f0523e3a37c0a7a07556f4667a15da38b86f

--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -242,7 +242,8 @@
       "migration-schema": "Migration schema",
       "sql-review": "SQL review",
       "earliest-allowed-time": "Earliest allowed time",
-      "ghost-sync": "gh-ost sync"
+      "ghost-sync": "gh-ost sync",
+      "statement-type": "Statement type"
     },
     "earliest-allowed-time-hint": "'@:{'common.when'}' specifies the expected execution timing for this task. If this field is not specified, the task will be executed once it has passed all other gating criteria.",
     "earliest-allowed-time-unset": "Unset",
