feat(frontend): BYT-1079 database table improvement part.2 (#2189)
* chore: support header class property

* feat: adjust columns

Former-commit-id: 4948c8d3efa5ca94d4b5234f9b5f246bf5cc2064

--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -856,8 +856,8 @@
       }
     },
     "backup-policy-violation": "Backup policy violation",
-    "sync-at": "Sync at {time}",
-    "not-found": "Not found"
+    "synced-at": "Synced at {time}",
+    "not-found-last-successful-sync-was": "Not found, last successful sync was {time}"
   },
   "repository": {
     "branch-observe-file-change": "The branch where Bytebase observes the file change.",
