--- a/frontend/src/locales/zh-CN.json
+++ b/frontend/src/locales/zh-CN.json
@@ -531,11 +531,12 @@
     "troubleshoot": "问题排查",
     "transfer-in-db": "转移数据库",
     "request-db": "申请数据库",
-    "from-default-project": "从默认项目",
-    "from-other-projects": "从其他项目",
-    "transfer-in-db-title": "从其他项目转移数据库",
+    "from-unassigned-databases": "从未分配的数据库",
+    "from-projects": "从其他项目",
+    "transfer-in-db-title": "转移数据库",
     "default-db-hint": "Bytebase 会定期同步实例的 Schema。新同步的数据库会放在默认项目中。",
-    "transfer-in-db-alert": "您确定要转移 \"{ dbName }\" 到我们的项目中吗？"
+    "transfer-in-db-alert": "您确定要转移 \"{ dbName }\" 到我们的项目中吗？",
+    "unassigned-db-hint": "Bytebase 会定期同步实例的 Schema。新同步的数据库会放在未分配数据库中。"
   },
   "create-db": {
     "new-database-name": "新数据库名称",
