chore(sql-editor): update open connection button (#2216)
Former-commit-id: db0b4266cb3920455cccf56ba1d7dec4f24c53b4

--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -1241,7 +1241,9 @@
     "save-sheet-input-placeholder": "Please input a sheet name",
     "untitled-sheet": "Untitled Sheet",
     "format": "Format",
-    "sql-review-result": "SQL review result"
+    "sql-review-result": "SQL review result",
+    "alter-table": "Alter table",
+    "open-connection": "Open connection"
   },
   "label": {
     "empty-label-value": "<Empty Value>",
