--- a/frontend/src/locales/zh-CN.json
+++ b/frontend/src/locales/zh-CN.json
@@ -1242,7 +1242,9 @@
     "save-sheet-input-placeholder": "请输入工作表名称",
     "untitled-sheet": "未命名工作表",
     "format": "格式化",
-    "sql-review-result": "SQL 检查结果"
+    "sql-review-result": "SQL 检查结果",
+    "alter-table": "修改表结构",
+    "open-connection": "打开连接"
   },
   "label": {
     "empty-label-value": "<空值>",
