fix: update the baseline instruction (#2249)
* fix: update the baseline instruction

Baseline is NOT a pre-requisite for applying migration for VCS-based project.

The code has already relaxed this, we forgot to update the instruction.

* chore: update

Co-authored-by: d-bytebase <d@bytebase.com>
Former-commit-id: 2cb8a098d492c3ec758fc88d6e24525613e810f1

--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -753,7 +753,7 @@
     "establish-baseline": "Establish new baseline",
     "refreshing-history": "Refreshing history ...",
     "config-instance": "Config instance",
-    "establish-baseline-description": "Bytebase will use the current schema as the new baseline. You should check that the current schema does reflect the desired state. For VCS workflow, there must exist a baseline before any incremental migration change can be applied to the database.",
+    "establish-baseline-description": "Bytebase will use the current schema as the new baseline. You should check that the current schema does reflect the desired state.",
     "establish-database-baseline": "Establish \"{name}\" baseline",
     "instance-missing-migration-schema": "Missing migration history schema on instance \"{name}\".",
     "instance-bad-connection": "Unable to connect instance \"{name}\" to retrieve migration history.",
