--- a/frontend/src/locales/zh-CN.json
+++ b/frontend/src/locales/zh-CN.json
@@ -754,7 +754,7 @@
     "establish-baseline": "建立新的基线",
     "refreshing-history": "刷新历史中 ...",
     "config-instance": "配置实例",
-    "establish-baseline-description": "Bytebase 将用当前的 schema 作为新的基线。您应该检查当前的基线确实反映了期望的状态。 对于 VCS 工作流来说，也只有在建立起基线的前提下，才能进行数据库变更。",
+    "establish-baseline-description": "Bytebase 将用当前的 schema 作为新的基线。您应该检查当前的基线确实反映了期望的状态。",
     "establish-database-baseline": "建立「{name}」基线",
     "instance-missing-migration-schema": "实例「{name}」缺失用于记录变更历史的 schema。",
     "instance-bad-connection": "无法连接实例「{name}」以获取变更历史。",
