--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -869,8 +869,8 @@
     "base-directory-description": "The root directory where Bytebase observes the file change. If empty, then it observes the entire repository.",
     "file-path-template": "File path template",
     "file-path-template-description": "Bytebase only observes the file path name matching the template pattern relative to the base directory.",
-    "file-path-example-normal-migration": "File path example for normal migration type",
-    "file-path-example-baseline-migration": "File path example for baseline migration type",
+    "file-path-example-schema-migration": "File path example for schema migration type",
+    "file-path-example-data-migration": "File path example for data migration type",
     "schema-path-template": "Schema path template",
     "schema-writeback-description": "When specified, after each migration, Bytebase will write the latest schema to the schema path relative to the base directory in the same branch as the original commit triggering the migration. Leave empty if you don't want Bytebase to do this.",
     "schema-writeback-protected-branch": "Make sure the changed branch is not protected or allow repository maintainer to push to that protected branch.",
