--- a/frontend/src/locales/zh-CN.json
+++ b/frontend/src/locales/zh-CN.json
@@ -870,8 +870,8 @@
     "base-directory-description": "Bytebase 跟踪文件变更的根目录。如果为空，则他会跟踪整个仓库。",
     "file-path-template": "文件路径模版",
     "file-path-template-description": "Bytebase 仅会跟踪那些文件路径匹配模版 (相对于指定根目录）的文件。",
-    "file-path-example-normal-migration": "针对普通变更类型的文件路径样例",
-    "file-path-example-baseline-migration": "针对基线变更类型的文件路径样例",
+    "file-path-example-schema-migration": "针对 schema 变更类型的文件路径样例",
+    "file-path-example-data-migration": "针对数据变更类型的文件路径样例",
     "schema-path-template": "Schema 路径模版",
     "schema-writeback-description": "如果指定，在每一次变更之后，Bytebase 将把最新的 Schema 回写到本来触发变更的提交分支，回写的具体路径则是相对于前面指定的根目录。如果您不希望 Bytebase 这样做，则置为空。",
     "schema-writeback-protected-branch": "请保证被变更的分支不是处于保护 (protected) 状态，或者仓库允许他的 maintainer 可以推送变更到保护分支。",
