--- a/frontend/src/locales/zh-CN.json
+++ b/frontend/src/locales/zh-CN.json
@@ -754,7 +754,7 @@
     "establish-baseline": "建立新的基线",
     "refreshing-history": "刷新历史中 ...",
     "config-instance": "配置实例",
-    "establish-baseline-description": "Bytebase 将用当前的 schema 作为新的基线。您应该检查当前的基线确实反映了期望的状态。",
+    "establish-baseline-description": "Bytebase 将用当前的 schema 作为新的基线。这将会把数据库当前的 schema 状态同步到 Bytebase 记录的 schema 状态，并且解决 schema 偏差的问题。在进行此操作前，您应该检查当前的基线确实反映了期望的状态。",
     "establish-database-baseline": "建立「{name}」基线",
     "instance-missing-migration-schema": "实例「{name}」缺失用于记录变更历史的 schema。",
     "instance-bad-connection": "无法连接实例「{name}」以获取变更历史。",
