feat(frontend): project owner approval policy (#2240)
* feat: type definitions

* chore: default value

* chore: fix edge case

* refactor: ship to script setup and fix typescript complaints

* feat: allow editing assignee group policy

* fix: infinite loop

* feat: support show-project-owner option

* feat: extract policy helper

* feat: implement allowProjectOwnerToApprove logic

* feat: implement allowProjectOwnerAsAssignee logic

* chore: use activeStage instead of selected stage

* chore: wording

* chore: show a notification when successfully updated policy

* refactor: extract allowProjectOwnerAsAssignee logic

* feat: allow project owner to approve task if possible

* Update frontend/src/locales/zh-CN.json

Co-authored-by: p0ny <907577610@qq.com>

* chore: naming

* feat: issue sidebar assignee filter logic

* chore: translating

* chore: fix parameters

* Update frontend/src/locales/zh-CN.json

Co-authored-by: boojack <imrealleonardo@gmail.com>

Co-authored-by: p0ny <907577610@qq.com>
Co-authored-by: boojack <imrealleonardo@gmail.com>
Former-commit-id: 1a68baaaebf63c43dbdeb5e89648aebf16ecf546

--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -655,7 +655,8 @@
     "archive": "Archive this environment",
     "archive-info": "Archived environment will not be shown on the normal interface. You can still restore later from the Archive page.",
     "create": "Create Environment",
-    "restore": "Restore this environment"
+    "restore": "Restore this environment",
+    "successfully-updated-environment": "Successfully updated environment '{name}'."
   },
   "quick-start": {
     "bookmark-an-issue": "Bookmark an issue",
@@ -718,7 +719,11 @@
       "manual": "Require manual approval",
       "manual-info": "Tasks will only be executed after being manually approved.",
       "auto": "Skip manual approval",
-      "auto-info": "Tasks will be approved and executed automatically if all task checks pass."
+      "auto-info": "Tasks will be approved and executed automatically if all task checks pass.",
+      "assignee-group": {
+        "workspace-owner-or-dba": "Require approval from DBA or workspace owner.",
+        "project-owner": "Require approval from project owner."
+      }
     },
     "backup": {
       "name": "Database backup schedule policy",
