--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -870,7 +870,7 @@
   },
   "repository": {
     "branch-observe-file-change": "The branch where Bytebase observes the file change.",
-    "branch-specify-tip": "Tip: You can also use wildcard like 'feature/*",
+    "branch-specify-tip": "Tip: You can also use wildcard like \"feature/*\"",
     "base-directory": "Base directory",
     "base-directory-description": "The root directory where Bytebase observes the file change. If empty, then it observes the entire repository.",
     "file-path-template": "File path template",
