--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -646,6 +646,7 @@
     "copy-grant-statement": "CREATE USER and GRANT statements copied to clipboard. Paste to your mysql client to apply.",
     "successfully-connected-instance": "Successfully connected instance.",
     "failed-to-connect-instance": "Failed to connect instance.",
+    "failed-to-connect-instance-localhost": "Failed to connect instance.\nIf you run Bytebase with Docker, please try \"host.docker.internal\" for the host address.",
     "search-instance-name": "Search instance name",
     "no-read-only-data-source-support": "The {database} does not currently support creating read-only connections",
     "grants": "Grants"
